--- a/index.html
+++ b/index.html
@@ -108,15 +108,20 @@
         </div>
       </section>
     </main>
-
-    <footer>
+    <!--Agregando Bs al Footer-->
+    <footer class="bg-dark text-black py-4">
       <!-- Las redes sociales son ficticias -->
-      <div>Buscanos en las redes</div>
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <div>
-        <h4>copyright - Todos los derechos reservados</h4>
+      <div class="container">
+        <nav class="row">
+          <ul class="col-3 list-unstyled">
+            <li class="font-weight-bold text-uppercarse"></li>
+            <li class="d-flex justify-content-between">
+              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </footer>
     <!-- JavaScript Bundle with Popper -->
