--- a/index.html
+++ b/index.html
@@ -38,32 +38,44 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <div class="row">
-          <button class="nav-toggle" aria-label="abrir navegacion">
-            <span class="hamburger"></span>
-          </button>
-          <a href="logo" class="logo">
+          <nav class="navbar navbar-expand-lg bg-orange">
+            <a href="logo" class="logo">
             <img src="./assets/logo/logo revuelo.png" alt="logo de revuelo" />
           </a>
-          <nav class="nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a class="nav__link" href="index.html">Inicio</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="pages/productos.html">Productos</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="pages/servicios.html">Servicios</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="pages/ubicacion.html">Ubicación</a>
-              </li>
-              <li class="nav__item">
-                <a class="nav__link" href="pages/contacto.html">Contacto</a>
-              </li>
-            </ul>
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"></a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html"
+                      >Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/pages/productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/pages/nuestra-fabrica.html">Nuestra Fábrica</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/pages/ubicacion.html">Ubicación</a>
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </nav>
         </div>
       </div>
@@ -109,7 +121,7 @@
       </section>
     </main>
     <!--Agregando Bs al Footer-->
-    <footer class="bg-dark text-black py-4">
+    <footer class="bg-orange text-dark py-4">
       <!-- Las redes sociales son ficticias -->
       <div class="container">
         <nav class="row">
