--- a/pages/nuestra-fabrica.html
+++ b/pages/nuestra-fabrica.html
@@ -28,35 +28,51 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <div class="row">
-          <button class="nav-toggle" aria-label="abrir navegacion">
-            <span class="hamburger"></span>
+      <nav class="navbar navbar-expand-lg bg-orange">
+        <a href="logo" class="logo">
+          <img src="../assets/logo/logo revuelo.png" alt="logo de revuelo" />
+        </a>
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
           </button>
-          <a href="logo" class="logo">
-            <img src="../assets/logo/logo revuelo.png" alt="logo de revuelo" />
-          </a>
-          <nav class="nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a class="nav__link" href="../index.html">Inicio</a>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="../index.html"
+                  >Inicio</a
+                >
               </li>
-              <li class="nav__item">
-                <a class="nav__link" href="productos.html">Productos</a>
+              <li class="nav-item">
+                <a class="nav-link" href="productos.html">Productos</a>
               </li>
-              <li class="nav__item">
-                <a class="nav__link" href="servicios.html">Servicios</a>
+              <li class="nav-item">
+                <a class="nav-link" href="nuestra-fabrica.html"
+                  >Nuestra Fábrica</a
+                >
               </li>
-              <li class="nav__item">
-                <a class="nav__link" href="ubicacion.html">Ubicación</a>
+              <li class="nav-item">
+                <a class="nav-link" href="ubicacion.html">Ubicación</a>
               </li>
-              <li class="nav__item">
-                <a class="nav__link" href="contacto.html">Contacto</a>
+              <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
             </ul>
-          </nav>
+          </div>
         </div>
-      </div>
+      </nav>
     </header>
     <main>
       <section class="servicios">
@@ -75,7 +91,7 @@
       </section>
     </main>
     <!--Agregando Bs al Footer-->
-    <footer class="bg-dark text-black py-4">
+    <footer class="bg-orange text-dark py-4">
       <!-- Las redes sociales son ficticias -->
       <div class="container">
         <nav class="row">
