--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
                       >Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/productos.html">Productos</a>
+                    <a class="nav-link" href="./pages/productos.html">Productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/nuestra-fabrica.html">Nuestra Fábrica</a>
+                    <a class="nav-link" href="./pages/nuestra-fabrica.html">Nuestra Fábrica</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/ubicacion.html">Ubicación</a>
+                    <a class="nav-link" href="./pages/ubicacion.html">Ubicación</a>
                   </li> 
                   <li class="nav-item">
-                    <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
