--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-orange">
+      <nav class="navbar navbar-expand-lg bg-orangegit">
         <a href="logo" class="logo">
           <img src="../assets/logo/logo revuelo.png" alt="logo de revuelo" />
         </a>
