Agregando animación al h1

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="container">
           <div>
             <div>
-              <h1>REVUELO</h1>
+              <h1 class="animate__animated animate__backInUp">REVUELO</h1>
             </div>
             <h2>Cerveza Artesanal</h2>
             <div>
