Modificaciones para la Segunda Pre Entrega

--- a/pages/nuestra-fabrica.html
+++ b/pages/nuestra-fabrica.html
@@ -77,17 +77,68 @@
     <main>
       <section class="servicios">
         <div class="container">
-          <h3>Te contamos como se fabrican nuestros productos</h3>
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/P4mTtHuufrU"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div>
+          <div class="row">
+            <div class="card mb-3">
+              <img
+                src="../assets/imagenes/img-7.jpg"
+                class="card-img-top"
+                alt="hermoso campo soleado"
+              />
+              <div class="card-body">
+                <h4 class="card-title">Nuestro Campo</h4>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+              </div>
+              <div class="card mb-3">
+                <img
+                  src="../assets/imagenes/img-10.jpg"
+                  class="card-img-top"
+                  alt="lúpulos verdes"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Productos 100% Agroecológicos</h4>
+                  <p class="card-text">
+                    This is a wider card with supporting text below as a natural
+                    lead-in to additional content. This content is a little bit
+                    longer.
+                  </p>
+                </div>
+             <div class="row">
+                  <div class="card mb-3">
+                    <img
+                      src="../assets/imagenes/img-17.jpg"
+                      class="card-img-top"
+                      alt="barriles de madera"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title">Planta Piloto</h4>
+                      <p class="card-text">
+                        This is a wider card with supporting text below as a natural
+                        lead-in to additional content. This content is a little bit
+                        longer.
+                      </p>
+                    </div>
+                    <div class="card mb-3">
+                      <img
+                        src="../assets/imagenes/img-13.jpg"
+                        class="card-img-top"
+                        alt="vasos y botellas vacías de cerveza"
+                      />
+                      <div class="card-body">
+                        <h4 class="card-title">Envasado</h4>
+                        <p class="card-text">
+                          This is a wider card with supporting text below as a natural
+                          lead-in to additional content. This content is a little bit
+                          longer.
+                        </p>
+                      </div>
+                    </div>
+                </div>
+          </div>
+         </div>
       </section>
     </main>
     <!--Agregando Bs al Footer-->
