--- a/pages/productos.html
+++ b/pages/productos.html
@@ -74,41 +74,82 @@
         </div>
       </nav>
     </header>
+    <!--Card con BS-->
     <main class="productos">
       <h2>CONOCE NUESTROS PRODUCTOS</h2>
       <div class="container">
-        <section class="grid__container">
-          <article class="grid__item">
-            <h3>IPA</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
-              quaerat nostrum omnis hic delectus facilis voluptates amet vitae
-              mollitia tempora rem reprehenderit sunt placeat dolorum ut maxime
-              consequuntur, alias impedit?
-            </p>
-
-            <img
-              src="../assets/imagenes/img4.jpg"
-              alt="un vaso de cerveza ipa"
-            />
-            <button>Más Info</button>
-          </article>
-          <article class="grid__item">
-            <h3>STOUT</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptate, sequi repellat! Eaque esse fugit ad deleniti dolorum
-              recusandae autem nemo beatae! Ratione repellendus magni tempora
-              hic qui cupiditate, velit dignissimos.
-            </p>
-
-            <img
-              src="../assets/imagenes/img3.jpg"
-              alt="un vaso de cerveza negra"
-            />
-            <button>Más Info</button>
-          </article>
-        </section>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card">
+              <img
+                src="../assets/imagenes/img-19.jpg"
+                class="card-img-top"
+                alt="vaso de cerveza rubia"
+              />
+              <div class="card-body">
+                <h4 class="card-title">IPA</h4>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary"> Más Info</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card">
+              <img
+                src="../assets/imagenes/img-18.jpg"
+                class="card-img-top"
+                alt="vaso de cerveza negra"
+              />
+              <div class="card-body">
+                <h4 class="card-title">PORTER</h4>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary"> Más Info</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row mt-4">
+          <div class="col-md-6">
+            <div class="card">
+              <img
+                src="../assets/imagenes/img-9.jpg"
+                class="card-img-top"
+                alt="vaso de cerveza roja"
+              />
+              <div class="card-body">
+                <h4 class="card-title">RED ALE</h4>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary"> Más Info</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card">
+              <img
+                src="../assets/imagenes/img-24.jpg"
+                class="card-img-top"
+                alt="vaso de cerveza dorada"
+              />
+              <div class="card-body">
+                <h5 class="card-title">HONEY BEER</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary"> Más Info</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <!--Agregando Bs al Footer-->
