--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="icono/cerveza.png" type="image/x-icon" />
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+   
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -15,6 +14,9 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css" />
     <!-- Google Font-->
     <enlace
       href="https: //fonts.googleapis.com/css2? familia= Lato:peso@100;400;900 & display=swap"
@@ -95,12 +97,13 @@
               />
             </div>
             <div>
-              <h3>
+              <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga
                 eum nobis, modi alias debitis sunt accusamus, at praesentium
                 ratione recusandae rerum assumenda exercitationem distinctio
                 neque ipsum nisi incidunt omnis fugit!
-              </h3>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore nobis tempore minima impedit est, sapiente alias quod nemo itaque odio necessitatibus recusandae eaque, maiores sint dolorem tenetur sequi error debitis.
+              </p>
             </div>
             <div>
               <img
@@ -109,12 +112,13 @@
               />
             </div>
             <div>
-              <h3>
+              <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Ducimus temporibus consectetur eos nostrum tempora pariatur
                 voluptate magnam nemo ut praesentium. Debitis maiores aut labore
                 nihil dolorum? Perferendis ex explicabo laudantium.
-              </h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore et dicta a quibusdam rerum qui quas neque perspiciatis odit molestias, labore facilis quo ipsam, in amet blanditiis vitae cumque accusamus.
+              </p>
             </div>
           </div>
         </div>
