Modificando Footer con BS

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -110,19 +110,29 @@
       </section>
     </main>
     <!--Agregando Bs al Footer-->
-    <footer class="bg-orange text-dark py-4">
+    <footer>
       <!-- Las redes sociales son ficticias -->
-      <div class="container">
-        <nav class="row">
-          <ul class="col-3 list-unstyled">
-            <li class="font-weight-bold text-uppercarse"></li>
-            <li class="d-flex justify-content-between">
-              <a href="#"><i class="fab fa-facebook"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-            </li>
-          </ul>
-        </nav>
+      <div class="container-fluid">
+        <div class="row p-5 pb-2 bg-orange text-blak">
+          <div class="col-xg-12 col-md-6 col-lg-3">
+            <p class="h5">Facebook</p>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+          </div>
+          <div class="col-xg-12 col-md-6 col-lg-3">
+            <p class="h5">Twitter</p>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </div>
+          <div class="col-xg-12 col-md-6 col-lg-3">
+            <p class="h5">Instagram</p>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+
+          <div class="col-xs-12 pt-4">
+            <p class="text-blak text-center">
+              Copyright- All rights reserverd © 2022
+            </p>
+          </div>
+        </div>
       </div>
     </footer>
     <!-- JavaScript Bundle with Popper -->
