Modificando Footer con BS

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -87,7 +87,7 @@
                 alt="vaso de cerveza rubia"
               />
               <div class="card-body">
-                <h4 class="card-title">IPA</h4>
+                <h4 class="card-title text-center">IPA</h4>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -104,7 +104,7 @@
                 alt="vaso de cerveza negra"
               />
               <div class="card-body">
-                <h4 class="card-title">PORTER</h4>
+                <h4 class="card-title text-center">PORTER</h4>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -123,7 +123,7 @@
                 alt="vaso de cerveza roja"
               />
               <div class="card-body">
-                <h4 class="card-title">RED ALE</h4>
+                <h4 class="card-title text-center">RED ALE</h4>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -140,7 +140,7 @@
                 alt="vaso de cerveza dorada"
               />
               <div class="card-body">
-                <h5 class="card-title">HONEY BEER</h5>
+                <h5 class="card-title text-center">HONEY BEER</h5>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
