--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="icono/cerveza.png" type="image/x-icon" />
 
-   
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -14,7 +13,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- Google Font-->
@@ -39,50 +38,51 @@
     <title>Revuelo</title>
   </head>
   <body>
-    <header>
-          <nav class="navbar navbar-expand-lg bg-orange">
-            <a href="logo" class="logo">
-            <img src="./assets/logo/logo revuelo.png" alt="logo de revuelo" />
-          </a>
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"></a>
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html"
-                      >Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/productos.html">Productos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/nuestra-fabrica.html">Nuestra Fábrica</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/ubicacion.html">Ubicación</a>
-                  </li> 
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+    <header class="w-100">
+      <nav class="navbar navbar-expand-lg bg-orange">
+        <a href="logo" class="logo">
+          <img src="./assets/logo/logo revuelo.png" alt="logo de revuelo" />
+        </a>
+        <div class="container">
+          <a class="navbar-brand" href="#"></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/nuestra-fabrica.html"
+                  >Nuestra Fábrica</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/ubicacion.html">Ubicación</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
+      </nav>
     </header>
-    <main class="inicio">
+    <main class="inicio w-100">
       <section>
         <div class="container">
           <div>
@@ -101,8 +101,11 @@
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga
                 eum nobis, modi alias debitis sunt accusamus, at praesentium
                 ratione recusandae rerum assumenda exercitationem distinctio
-                neque ipsum nisi incidunt omnis fugit!
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore nobis tempore minima impedit est, sapiente alias quod nemo itaque odio necessitatibus recusandae eaque, maiores sint dolorem tenetur sequi error debitis.
+                neque ipsum nisi incidunt omnis fugit! Lorem ipsum dolor sit,
+                amet consectetur adipisicing elit. Dolore nobis tempore minima
+                impedit est, sapiente alias quod nemo itaque odio necessitatibus
+                recusandae eaque, maiores sint dolorem tenetur sequi error
+                debitis.
               </p>
             </div>
             <div>
@@ -116,8 +119,11 @@
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                 Ducimus temporibus consectetur eos nostrum tempora pariatur
                 voluptate magnam nemo ut praesentium. Debitis maiores aut labore
-                nihil dolorum? Perferendis ex explicabo laudantium.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore et dicta a quibusdam rerum qui quas neque perspiciatis odit molestias, labore facilis quo ipsam, in amet blanditiis vitae cumque accusamus.
+                nihil dolorum? Perferendis ex explicabo laudantium. Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Tempore et dicta a
+                quibusdam rerum qui quas neque perspiciatis odit molestias,
+                labore facilis quo ipsam, in amet blanditiis vitae cumque
+                accusamus.
               </p>
             </div>
           </div>
@@ -127,23 +133,28 @@
     <!--Agregando Bs al Footer-->
     <footer>
       <!-- Las redes sociales son ficticias -->
-         <div class="container-fluid">
-          <div class="row p-5 pb-2 bg-orange text-blak">
-           <div class="col-xg-12 col-md-6 col-lg-3">
-            <p class="h5">Facebook</p> <a href="#"><i class="  fab fa-facebook"></i></a>
-           </div>
-           <div class="col-xg-12 col-md-6 col-lg-3">
-            <p class="h5">Twitter</p> <a href="#"><i class="fab fa-twitter"></i></a>
-           </div>
-           <div class="col-xg-12 col-md-6 col-lg-3">
-            <p class="h5">Instagram</p><a href="#"><i class="fab fa-instagram"></i></a>
-           </div>
-
-           <div class="col-xs-12 pt-4">
-              <p class="text-blak text-center">Copyright- All rights reserverd © 2022</p>
-           </div>
+      <div class="container-fluid">
+        <div class="row p-5 pb-2 bg-orange text-blak">
+          <div class="col-xg-12 col-md-6 col-lg-3">
+            <p class="h5">Facebook</p>
+            <a href="#"><i class="fab fa-facebook"></i></a>
           </div>
-         </div>
+          <div class="col-xg-12 col-md-6 col-lg-3">
+            <p class="h5">Twitter</p>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </div>
+          <div class="col-xg-12 col-md-6 col-lg-3">
+            <p class="h5">Instagram</p>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+
+          <div class="col-xs-12 pt-4">
+            <p class="text-blak text-center">
+              Copyright- All rights reserverd © 2022
+            </p>
+          </div>
+        </div>
+      </div>
     </footer>
     <!-- JavaScript Bundle with Popper -->
     <script
