--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,7 +31,7 @@
     <title>Contacto</title>
   </head>
   <body>
-    <header>
+    <header class="w-100">
       <nav class="navbar navbar-expand-lg bg-orange">
         <a href="logo" class="logo">
           <img src="../assets/logo/logo revuelo.png" alt="logo de revuelo" />
@@ -50,7 +50,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a
                   class="nav-link active"
@@ -78,7 +78,7 @@
         </div>
       </nav>
     </header>
-    <main class="form">
+    <main class="form w-100">
       <section>
         <div class="container">
           <div class="flex-container">
