--- a/pages/productos.html
+++ b/pages/productos.html
@@ -27,7 +27,7 @@
     <title>Productos</title>
   </head>
   <body>
-    <header>
+    <header class="w-100">
       <nav class="navbar navbar-expand-lg bg-orange">
         <a href="logo" class="logo">
           <img src="../assets/logo/logo revuelo.png" alt="logo de revuelo" />
@@ -46,7 +46,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a
                   class="nav-link active"
@@ -75,7 +75,7 @@
       </nav>
     </header>
     <!--Card con BS-->
-    <main class="productos">
+    <main class="productos w-100">
       <h2>CONOCE NUESTROS PRODUCTOS</h2>
       <div class="container">
         <div class="row">
