--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -27,7 +27,7 @@
     <title>Ubicación</title>
   </head>
   <body>
-    <header>
+    <header class="w-100">
       <nav class="navbar navbar-expand-lg bg-orangegit">
         <a href="logo" class="logo">
           <img src="../assets/logo/logo revuelo.png" alt="logo de revuelo" />
@@ -46,7 +46,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a
                   class="nav-link active"
@@ -74,7 +74,7 @@
         </div>
       </nav>
     </header>
-    <main class="ubicacion">
+    <main class="ubicacion w-100">
       <section>
         <div class="container">
           <article>
