h1 en las pages

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -76,7 +76,7 @@
     </header>
     <!--Card con BS-->
     <main class="productos w-100">
-      <h2>CONOCE NUESTROS PRODUCTOS</h2>
+      <h1>Elegí tu REVUELO favorita</h1>
       <div class="container">
         <div class="row">
           <div class="col-md-6">
