--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -81,7 +81,7 @@
             <table>
               <tr>
                 <td>
-                  <h3>Donde esta ubicada nuestra instalación</h3>
+                  <h1>REVUELO te espera !</h1>
                 </td>
               </tr>
               <tr>
