--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -81,6 +81,7 @@
     <main class="form w-100">
       <section>
         <div class="container">
+          <h1>REVUELO quiere conocerte! Escribinos</h1>
           <div class="flex-container">
             <div class="contac-form">
               <form action="">
