SEO más arreglos para la Tercera Entrega

--- a/pages/nuestra-fabrica.html
+++ b/pages/nuestra-fabrica.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--SEO-->
+    <meta
+      name="description"
+      content="La mejor cerveza artesanal del NOA elaborada por su propia dueña con productos 100% agroecológicos"
+    />
+    <meta
+      name="keywords"
+      content="cerveza,artesanal,cebada,agroecológico,NOA,Salta,Argentina"
+    />
     <link
       href="https: //fonts.googleapis.com/css2? familia= Lato:peso@100;400;700;900 & display=swap"
       rel="stylesheet"
@@ -24,7 +33,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="../js/main.js" defer></script>
-    <title>Servicios</title>
+    <title>Revuelo-Fábrica</title>
   </head>
   <body>
     <header class="w-100">
@@ -110,7 +119,7 @@
              <div class="row">
                   <div class="card mb-3">
                     <img
-                      src="../assets/imagenes/img-17.jpg"
+                      src="../assets/imagenes/img-6.jpg"
                       class="card-img-top"
                       alt="barriles de madera"
                     />
