--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--SEO-->
+    <meta
+      name="description"
+      content="La mejor cerveza artesanal del NOA elaborada por su propia dueña con productos 100% agroecológicos"
+    />
+    <meta
+      name="keywords"
+      content="cerveza,artesanal,cebada,agroecológico,NOA,Salta,Argentina"
+    />
     <link
       href="https: //fonts.googleapis.com/css2? familia= Lato:peso@100;400;700;900 & display=swap"
       rel="stylesheet"
@@ -24,7 +33,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="../js/main.js" defer></script>
-    <title>Productos</title>
+    <title>Revuelo-Productos</title>
   </head>
   <body>
     <header class="w-100">
@@ -87,7 +96,7 @@
                 alt="vaso de cerveza rubia"
               />
               <div class="card-body">
-                <h4 class="card-title text-center">IPA</h4>
+                <h4 class">IPA</h4>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -104,7 +113,7 @@
                 alt="vaso de cerveza negra"
               />
               <div class="card-body">
-                <h4 class="card-title text-center">PORTER</h4>
+                <h4 class="card-title">PORTER</h4>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -123,7 +132,7 @@
                 alt="vaso de cerveza roja"
               />
               <div class="card-body">
-                <h4 class="card-title text-center">RED ALE</h4>
+                <h4 class="card-title">RED ALE</h4>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -140,7 +149,7 @@
                 alt="vaso de cerveza dorada"
               />
               <div class="card-body">
-                <h5 class="card-title text-center">HONEY BEER</h5>
+                <h5 class="card-title">HONEY BEER</h5>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
