--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--SEO-->
+    <meta
+      name="description"
+      content="La mejor cerveza artesanal del NOA elaborada por su propia dueña con productos 100% agroecológicos"
+    />
+    <meta
+      name="keywords"
+      content="cerveza,artesanal,cebada,agroecológico,NOA,Salta,Argentina"
+    />
     <link
       href="https: //fonts.googleapis.com/css2? familia= Lato:peso@100;400;700;900 & display=swap"
       rel="stylesheet"
@@ -24,7 +33,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="../js/main.js" defer></script>
-    <title>Ubicación</title>
+    <title>Revuelo-Ubicación</title>
   </head>
   <body>
     <header class="w-100">
@@ -77,28 +86,18 @@
     <main class="ubicacion w-100">
       <section>
         <div class="container">
-          <article>
-            <table>
-              <tr>
-                <td>
-                  <h1>REVUELO te espera !</h1>
-                </td>
-              </tr>
-              <tr>
-                <td>
-                  <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28738.219114734482!2d-64.9705776!3d-25.79442125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x941850ebef9022f7%3A0x2d9e68da955663ac!2sRosario%20de%20la%20Frontera%2C%20Salta!5e0!3m2!1ses-419!2sar!4v1656136088185!5m2!1ses-419!2sar"
-                    width="600"
-                    height="450"
-                    style="border: 0"
-                    allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"
-                  ></iframe>
-                </td>
-              </tr>
-            </table>
-          </article>
+          <h1>REVUELO te espera !</h1>
+          <div class="map-responsive">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28738.219114734482!2d-64.9705776!3d-25.79442125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x941850ebef9022f7%3A0x2d9e68da955663ac!2sRosario%20de%20la%20Frontera%2C%20Salta!5e0!3m2!1ses-419!2sar!4v1656136088185!5m2!1ses-419!2sar"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
         </div>
       </section>
       <section>
