--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="icono/cerveza.png" type="image/x-icon" />
-
+    <!--SEO-->
+    <meta
+      name="description"
+      content="La mejor cerveza artesanal del NOA elaborada por su propia dueña con productos 100% agroecológicos"
+    />
+    <meta
+      name="keywords"
+      content="cerveza,artesanal,cebada,agroecológico,NOA,Salta,Argentina"
+    />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -35,7 +42,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <script src="./js/main.js" defer></script>
-    <title>Revuelo</title>
+    <title>Revuelo-Cerveza Artesanal</title>
   </head>
   <body>
     <header class="w-100">
