--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--SEO-->
+    <meta
+      name="description"
+      content="La mejor cerveza artesanal del NOA elaborada por su propia dueña con productos 100% agroecológicos"
+    />
+    <meta
+      name="keywords"
+      content="cerveza,artesanal,cebada,agroecológico,NOA,Salta,Argentina"
+    />
     <link
       href="https: //fonts.googleapis.com/css2? familia= Lato:peso@100;400;700;900 & display=swap"
       rel="stylesheet"
@@ -28,7 +37,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <script src="../js/main.js" defer></script>
-    <title>Contacto</title>
+    <title>Revuelo-Contacto</title>
   </head>
   <body>
     <header class="w-100">
