Modificaciones para Entrega Final

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -96,7 +96,7 @@
                 alt="vaso de cerveza rubia"
               />
               <div class="card-body">
-                <h4 class">IPA</h4>
+                <h4 class>IPA</h4>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
