--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   </head>
   <body>
     <header class="w-100">
+      <!-- Inicio de Navbar con BS-->
       <nav class="navbar navbar-expand-lg bg-orange">
         <a href="logo" class="logo">
           <img src="./assets/logo/logo revuelo.png" alt="logo de revuelo" />
@@ -66,7 +67,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="nav-link" aria-current="page" href="index.html"
                   >Inicio</a
                 >
               </li>
@@ -88,6 +89,7 @@
           </div>
         </div>
       </nav>
+      <!--Fin de la Navbar con BS-->
     </header>
     <main class="inicio w-100">
       <section>
