Nuevas Modificaciones para la Entrega Final

--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
-    <!-- Google Font-->
-    <enlace
-      href="https: //fonts.googleapis.com/css2? familia= Lato:peso@100;400;900 & display=swap"
-      rel="hoja de estilo"
-    ></enlace>
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Dancing+Script:wght@400;500;600;700&family=Lobster&family=Mr+Dafoe&family=Pacifico&family=Permanent+Marker&family=Rock+Salt&family=Rubik+Distressed&display=swap" rel="stylesheet">
     <!--Font Awesome-->
     <link
       rel="stylesheet"
@@ -41,11 +37,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <script src="./js/main.js" defer></script>
     <title>Revuelo-Cerveza Artesanal</title>
   </head>
   <body>
-    <header class="w-100">
+    <header>
       <!-- Inicio de Navbar con BS-->
       <nav class="navbar navbar-expand-lg bg-orange">
         <a href="logo" class="logo">
@@ -67,7 +62,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html"
+                <a class="nav-link active" aria-current="page" href="index.html"
                   >Inicio</a
                 >
               </li>
@@ -91,7 +86,7 @@
       </nav>
       <!--Fin de la Navbar con BS-->
     </header>
-    <main class="inicio w-100">
+    <main class="inicio">
       <section>
         <div class="container">
           <div>
@@ -102,19 +97,16 @@
             <div>
               <img
                 src="assets/imagenes/img-revuelo-5.jpg"
-                alt="un vaso de cerveza refrescante"
+                alt="barra de un bar con una canilla cervezera"
               />
             </div>
-            <div>
+            <div class="texto-index">
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga
-                eum nobis, modi alias debitis sunt accusamus, at praesentium
-                ratione recusandae rerum assumenda exercitationem distinctio
-                neque ipsum nisi incidunt omnis fugit! Lorem ipsum dolor sit,
-                amet consectetur adipisicing elit. Dolore nobis tempore minima
-                impedit est, sapiente alias quod nemo itaque odio necessitatibus
-                recusandae eaque, maiores sint dolorem tenetur sequi error
-                debitis.
+                <h3>DESDE EL ORIGEN HASTA LA CANILLA</h3> 
+                Nos mueve una idea de artesanal que representa un espíritu nuevo y leal a lo que uno cree.
+                REVUELO es la prueba de que mientras haya un paladar habrá una
+                nueva exploración por los caminos del lúpulo, la cebada y quién
+                más sabe qué.
               </p>
             </div>
             <div>
@@ -123,16 +115,15 @@
                 alt="vaso de cerveza espumante"
               />
             </div>
-            <div>
+            <div class="texto-index">
               <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Ducimus temporibus consectetur eos nostrum tempora pariatur
-                voluptate magnam nemo ut praesentium. Debitis maiores aut labore
-                nihil dolorum? Perferendis ex explicabo laudantium. Lorem ipsum
-                dolor sit amet consectetur adipisicing elit. Tempore et dicta a
-                quibusdam rerum qui quas neque perspiciatis odit molestias,
-                labore facilis quo ipsam, in amet blanditiis vitae cumque
-                accusamus.
+               <h3>LA COMUNIDAD REVUELO ES REBELDE Y MUY BIEN CUIDADA</h3> 
+                La cultura de REVUELO, que valora y encuentra placer en lo
+                artesanal, sabe también de la importancia del consumo
+                responsable. Por eso, estamos comprometidos con
+                difundir y crear cultura en el consumo responsable de nuestros
+                productos. Porque no hay nada más importante que sentirnos
+                orgullosos de nuestra esencia.
               </p>
             </div>
           </div>
