--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,11 +13,7 @@
       name="keywords"
       content="cerveza,artesanal,cebada,agroecológico,NOA,Salta,Argentina"
     />
-    <link
-      href="https: //fonts.googleapis.com/css2? familia= Lato:peso@100;400;700;900 & display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../css/style.css" />
+
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -25,6 +21,14 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <!-- CSS -->
+    <link rel="stylesheet" href="../css/style.css" />
+    <!--Google Fonts-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Dancing+Script:wght@400;500;600;700&family=Lobster&family=Mr+Dafoe&family=Pacifico&family=Permanent+Marker&family=Rock+Salt&family=Rubik+Distressed&display=swap"
+      rel="stylesheet"
+    />
+    <!--Font Awesome-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -32,11 +36,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script src="../js/main.js" defer></script>
     <title>Revuelo-Ubicación</title>
   </head>
   <body>
-    <header class="w-100">
+    <header>
+      <!-- Inicio de Navbar con BS-->
       <nav class="navbar navbar-expand-lg bg-orangegit">
         <a href="logo" class="logo">
           <img src="../assets/logo/logo revuelo.png" alt="logo de revuelo" />
@@ -83,26 +87,21 @@
         </div>
       </nav>
     </header>
-    <main class="ubicacion w-100">
-      <section>
-        <div class="container">
-          <h1>REVUELO te espera !</h1>
-          <div class="map-responsive">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28738.219114734482!2d-64.9705776!3d-25.79442125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x941850ebef9022f7%3A0x2d9e68da955663ac!2sRosario%20de%20la%20Frontera%2C%20Salta!5e0!3m2!1ses-419!2sar!4v1656136088185!5m2!1ses-419!2sar"
-              width="600"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
+    <main class="ubicacion">
+      <div class="container">
+        <h1>REVUELO te espera !</h1>
+        <div class="map-responsive">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28738.219114734482!2d-64.9705776!3d-25.79442125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x941850ebef9022f7%3A0x2d9e68da955663ac!2sRosario%20de%20la%20Frontera%2C%20Salta!5e0!3m2!1ses-419!2sar!4v1656136088185!5m2!1ses-419!2sar"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
-      </section>
-      <section>
-        <article></article>
-      </section>
+      </div>
     </main>
     <!--Agregando Bs al Footer-->
     <footer>
