--- a/pages/nuestra-fabrica.html
+++ b/pages/nuestra-fabrica.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,11 +13,7 @@
       name="keywords"
       content="cerveza,artesanal,cebada,agroecológico,NOA,Salta,Argentina"
     />
-    <link
-      href="https: //fonts.googleapis.com/css2? familia= Lato:peso@100;400;700;900 & display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../css/style.css" />
+
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -25,6 +21,14 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <!-- CSS -->
+    <link rel="stylesheet" href="../css/style.css" />
+    <!--Google Fonts-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Dancing+Script:wght@400;500;600;700&family=Lobster&family=Mr+Dafoe&family=Pacifico&family=Permanent+Marker&family=Rock+Salt&family=Rubik+Distressed&display=swap"
+      rel="stylesheet"
+    />
+    <!--Font Awesome-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -32,11 +36,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script src="../js/main.js" defer></script>
     <title>Revuelo-Fábrica</title>
   </head>
   <body>
-    <header class="w-100">
+    <header>
+      <!-- Inicio de Navbar con BS-->
       <nav class="navbar navbar-expand-lg bg-orange">
         <a href="logo" class="logo">
           <img src="../assets/logo/logo revuelo.png" alt="logo de revuelo" />
@@ -83,94 +87,100 @@
         </div>
       </nav>
     </header>
-    <main class="w-100">
-      <section class="servicios">
+    <main class="fabrica">
+      <section>
         <div class="container">
           <h1>Te Contamos Acerca de Nosotros</h1>
-          <div class="row">
-            <div class="card mb-3">
-              <img
-                src="../assets/imagenes/img-7.jpg"
-                class="card-img-top"
-                alt="hermoso campo soleado"
-              />
-              <div class="card-body">
-                <h4 class="card-title">Nuestro Campo</h4>
-                <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-              </div>
-              <div class="card mb-3">
-                <img
-                  src="../assets/imagenes/img-10.jpg"
-                  class="card-img-top"
-                  alt="lúpulos verdes"
-                />
-                <div class="card-body">
-                  <h4 class="card-title">Productos 100% Agroecológicos</h4>
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
-                </div>
-             <div class="row">
-                  <div class="card mb-3">
-                    <img
-                      src="../assets/imagenes/img-6.jpg"
-                      class="card-img-top"
-                      alt="barriles de madera"
-                    />
-                    <div class="card-body">
-                      <h4 class="card-title">Planta Piloto</h4>
-                      <p class="card-text">
-                        This is a wider card with supporting text below as a natural
-                        lead-in to additional content. This content is a little bit
-                        longer.
-                      </p>
-                    </div>
-                    <div class="card mb-3">
-                      <img
-                        src="../assets/imagenes/img-13.jpg"
-                        class="card-img-top"
-                        alt="vasos y botellas vacías de cerveza"
-                      />
-                      <div class="card-body">
-                        <h4 class="card-title">Envasado</h4>
-                        <p class="card-text">
-                          This is a wider card with supporting text below as a natural
-                          lead-in to additional content. This content is a little bit
-                          longer.
-                        </p>
-                      </div>
-                    </div>
-                </div>
+
+          <div class="card mb-3">
+            <img
+              src="../assets/imagenes/img-7.jpg"
+              class="card-img-top"
+              alt="hermoso campo soleado"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Nuestro Campo</h4>
+              <p class="card-text">
+                Aquí nace nuestro espíritu artesanal, una llama interna que
+                alimentamos día a día y la cual consideramos parte de nuestro
+                estilo de vida, que nos impulsa a pensar siempre en cómo hacer
+                mejores recetas y experiencias, porque ya es parte de nuestro
+                ADN.
+              </p>
+            </div>
           </div>
-         </div>
+          <div class="card mb-3">
+            <img
+              src="../assets/imagenes/img-10.jpg"
+              class="card-img-top"
+              alt="lúpulos verdes"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Productos 100% Agroecológicos</h4>
+              <p class="card-text">
+                La calidad de las materias primas con las que elaboramos
+                nuestras cervezas, es el puntapié inicial para alcanzar un buen
+                producto final.
+              </p>
+            </div>
+          </div>
+          <div class="card mb-3">
+            <img
+              src="../assets/imagenes/img-6.jpg"
+              class="card-img-top"
+              alt="barriles de madera"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Planta Piloto</h4>
+              <p class="card-text">
+                Nuestra planta está equipada con tecnología de primer nivel que
+                nos permite mantener controlados los procesos de producción,
+                para lograr la estandarización de nuestro producto.
+              </p>
+            </div>
+          </div>
+          <div class="card mb-3">
+            <img
+              src="../assets/imagenes/img-13.jpg"
+              class="card-img-top"
+              alt="vasos y botellas vacías de cerveza"
+            />
+            <div class="card-body">
+              <h4 class="card-title">Envasado</h4>
+              <p class="card-text">
+                Estamos en cada detalle. Buscamos la excelencia en todo lo que
+                hacemos, no sólo en la cerveza.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <!--Agregando Bs al Footer-->
     <footer>
       <!-- Las redes sociales son ficticias -->
-         <div class="container-fluid">
-          <div class="row p-5 pb-2 bg-orange text-blak">
-           <div class="col-xg-12 col-md-6 col-lg-3">
-            <p class="h5">Facebook</p> <a href="#"><i class="  fab fa-facebook"></i></a>
-           </div>
-           <div class="col-xg-12 col-md-6 col-lg-3">
-            <p class="h5">Twitter</p> <a href="#"><i class="fab fa-twitter"></i></a>
-           </div>
-           <div class="col-xg-12 col-md-6 col-lg-3">
-            <p class="h5">Instagram</p><a href="#"><i class="fab fa-instagram"></i></a>
-           </div>
-
-           <div class="col-xs-12 pt-4">
-              <p class="text-blak text-center">Copyright- All rights reserverd © 2022</p>
-           </div>
+      <div class="container-fluid">
+        <div class="row p-5 pb-2 bg-orange text-blak">
+          <div class="col-xg-12 col-md-6 col-lg-3">
+            <p class="h5">Facebook</p>
+            <a href="#"><i class="fab fa-facebook"></i></a>
           </div>
-         </div>
+          <div class="col-xg-12 col-md-6 col-lg-3">
+            <p class="h5">Twitter</p>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </div>
+          <div class="col-xg-12 col-md-6 col-lg-3">
+            <p class="h5">Instagram</p>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+
+          <div class="col-xs-12 pt-4">
+            <p class="text-blak text-center">
+              Copyright- All rights reserverd © 2022
+            </p>
+          </div>
+        </div>
+      </div>
     </footer>
     <!-- JavaScript Bundle with Popper -->
     <script
