--- a/pages/productos.html
+++ b/pages/productos.html
@@ -13,11 +13,7 @@
       name="keywords"
       content="cerveza,artesanal,cebada,agroecológico,NOA,Salta,Argentina"
     />
-    <link
-      href="https: //fonts.googleapis.com/css2? familia= Lato:peso@100;400;700;900 & display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../css/style.css" />
+
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -25,6 +21,14 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <!-- CSS -->
+    <link rel="stylesheet" href="../css/style.css" />
+    <!--Google Fonts-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Dancing+Script:wght@400;500;600;700&family=Lobster&family=Mr+Dafoe&family=Pacifico&family=Permanent+Marker&family=Rock+Salt&family=Rubik+Distressed&display=swap"
+      rel="stylesheet"
+    />
+    <!--Font Awesome-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -32,11 +36,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script src="../js/main.js" defer></script>
     <title>Revuelo-Productos</title>
   </head>
   <body>
-    <header class="w-100">
+    <header>
+      <!-- Inicio de Navbar con BS-->
       <nav class="navbar navbar-expand-lg bg-orange">
         <a href="logo" class="logo">
           <img src="../assets/logo/logo revuelo.png" alt="logo de revuelo" />
@@ -84,7 +88,7 @@
       </nav>
     </header>
     <!--Card con BS-->
-    <main class="productos w-100">
+    <main class="productos">
       <h1>Elegí tu REVUELO favorita</h1>
       <div class="container">
         <div class="row">
@@ -98,8 +102,8 @@
               <div class="card-body">
                 <h4 class>IPA</h4>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Antiguo estilo colonial, de color ámbar y fuerte amargor.
+                  Aromas cítricos y frutales, le dan una marcada personalidad.
                 </p>
                 <a href="#" class="btn btn-primary"> Más Info</a>
               </div>
@@ -115,8 +119,9 @@
               <div class="card-body">
                 <h4 class="card-title">PORTER</h4>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Clásico estilo londinense de gran cuerpo y de color oscuro. Su
+                  cremosidad marida con notas ahumadas y aroma a café y
+                  chocolate.
                 </p>
                 <a href="#" class="btn btn-primary"> Más Info</a>
               </div>
@@ -134,8 +139,9 @@
               <div class="card-body">
                 <h4 class="card-title">RED ALE</h4>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Verdadero estilo irlandés, de amargor ligero y color rojizo.
+                  Destaca su suave aroma a maltas con notas dulces de caramelo
+                  tostado.
                 </p>
                 <a href="#" class="btn btn-primary"> Más Info</a>
               </div>
@@ -151,8 +157,8 @@
               <div class="card-body">
                 <h5 class="card-title">HONEY BEER</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Típico estilo joven de notas profundas en boca. Su frescura
+                  marida dulcemente con la intensidad de la malta.
                 </p>
                 <a href="#" class="btn btn-primary"> Más Info</a>
               </div>
