--- a/pages/nuestra-fabrica.html
+++ b/pages/nuestra-fabrica.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <!--Google Fonts-->
     <link
-      href="https://fonts.googleapis.com/css2?family=Anton&family=Dancing+Script:wght@400;500;600;700&family=Lobster&family=Mr+Dafoe&family=Pacifico&family=Permanent+Marker&family=Rock+Salt&family=Rubik+Distressed&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Dancing+Script:wght@400;500;600;700&family=Lato:wght@400;700;900&family=Lobster&family=Mr+Dafoe&family=Pacifico&family=Permanent+Marker&family=Rock+Salt&family=Rubik+Distressed&display=swap"
       rel="stylesheet"
     />
     <!--Font Awesome-->
@@ -36,6 +36,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!--Animate CSS-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>Revuelo-Fábrica</title>
   </head>
   <body>
@@ -43,7 +48,10 @@
       <!-- Inicio de Navbar con BS-->
       <nav class="navbar navbar-expand-lg bg-orange">
         <a href="logo" class="logo">
-          <img src="../assets/logo/logo revuelo.png" alt="logo de revuelo" />
+          <img
+            src="../assets/logo/logo revuelo (convert.io).webp"
+            alt="logo de revuelo"
+          />
         </a>
         <div class="container-fluid">
           <a class="navbar-brand" href="#"></a>
@@ -94,7 +102,7 @@
 
           <div class="card mb-3">
             <img
-              src="../assets/imagenes/img-7.jpg"
+              src="../assets/imagenes/img-7.webp"
               class="card-img-top"
               alt="hermoso campo soleado"
             />
@@ -111,7 +119,7 @@
           </div>
           <div class="card mb-3">
             <img
-              src="../assets/imagenes/img-10.jpg"
+              src="../assets/imagenes/img-10.webp"
               class="card-img-top"
               alt="lúpulos verdes"
             />
@@ -126,7 +134,7 @@
           </div>
           <div class="card mb-3">
             <img
-              src="../assets/imagenes/img-6.jpg"
+              src="../assets/imagenes/img-6.webp"
               class="card-img-top"
               alt="barriles de madera"
             />
@@ -141,7 +149,7 @@
           </div>
           <div class="card mb-3">
             <img
-              src="../assets/imagenes/img-13.jpg"
+              src="../assets/imagenes/img-13.webp"
               class="card-img-top"
               alt="vasos y botellas vacías de cerveza"
             />
