--- a/pages/productos.html
+++ b/pages/productos.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <!--Google Fonts-->
     <link
-      href="https://fonts.googleapis.com/css2?family=Anton&family=Dancing+Script:wght@400;500;600;700&family=Lobster&family=Mr+Dafoe&family=Pacifico&family=Permanent+Marker&family=Rock+Salt&family=Rubik+Distressed&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Anton&family=Dancing+Script:wght@400;500;600;700&family=Lato:wght@400;700;900&family=Lobster&family=Mr+Dafoe&family=Pacifico&family=Permanent+Marker&family=Rock+Salt&family=Rubik+Distressed&display=swap"
       rel="stylesheet"
     />
     <!--Font Awesome-->
@@ -36,6 +36,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!--Animate CSS-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <title>Revuelo-Productos</title>
   </head>
   <body>
@@ -43,7 +48,10 @@
       <!-- Inicio de Navbar con BS-->
       <nav class="navbar navbar-expand-lg bg-orange">
         <a href="logo" class="logo">
-          <img src="../assets/logo/logo revuelo.png" alt="logo de revuelo" />
+          <img
+            src="../assets/logo/logo revuelo (convert.io).webp"
+            alt="logo de revuelo"
+          />
         </a>
         <div class="container-fluid">
           <a class="navbar-brand" href="#"></a>
@@ -95,7 +103,7 @@
           <div class="col-md-6">
             <div class="card">
               <img
-                src="../assets/imagenes/img-19.jpg"
+                src="../assets/imagenes/img-19.webp"
                 class="card-img-top"
                 alt="vaso de cerveza rubia"
               />
@@ -112,7 +120,7 @@
           <div class="col-md-6">
             <div class="card">
               <img
-                src="../assets/imagenes/img-18.jpg"
+                src="../assets/imagenes/img-18.webp"
                 class="card-img-top"
                 alt="vaso de cerveza negra"
               />
@@ -132,7 +140,7 @@
           <div class="col-md-6">
             <div class="card">
               <img
-                src="../assets/imagenes/img-9.jpg"
+                src="../assets/imagenes/img-9.webp"
                 class="card-img-top"
                 alt="vaso de cerveza roja"
               />
@@ -150,7 +158,7 @@
           <div class="col-md-6">
             <div class="card">
               <img
-                src="../assets/imagenes/img-24.jpg"
+                src="../assets/imagenes/img-20.webp"
                 class="card-img-top"
                 alt="vaso de cerveza dorada"
               />
